k8s/portfolio-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
  labels:
    app: portfolio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      serviceAccountName: portfolio-sa
      automountServiceAccountToken: false

      securityContext:
        runAsUser: 101
        runAsGroup: 101
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: portfolio
          image: 008482604258.dkr.ecr.eu-north-1.amazonaws.com/sai-kukkapalli-devops-portfolio:9
          ports:
            - containerPort: 8080
          securityContext:
            runAsUser: 101
            runAsGroup: 101
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
