k8s/portfolio-service.yml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  labels:
    app: portfolio
spec:
  type: ClusterIP
  selector:
    app: portfolio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
