k8s/portfolio-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: portfolio-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: portfolio

  policyTypes:
    - Ingress

  ingress:
    - ports:
        - protocol: TCP
          port: 8080
